[package]
name = "oprf"
version = "0.1.0"
edition = "2024"

[dependencies]
group = "0.14.0-pre.0"
digest = "0.11.0-rc.1"
rand_core = "0.9.3"
zeroize = "1.8.1"

[dev-dependencies]
curve25519-dalek = { version = "5.0.0-pre.1", features = ["ff", "group"] }
ed448-goldilocks = "0.14.0-pre.4"
hash2curve = "0.14.0-rc.2"
p256 = { version = "0.14.0-pre.11", features = ["hash2curve"] }
p384 = { version = "0.14.0-pre.11", features = ["hash2curve"] }
p521 = { version = "0.14.0-pre.11", features = ["hash2curve"] }
sha2 = "0.11.0-rc.2"
sha3 = "0.11.0-rc.3"
const-hex = "1.15.0"
primeorder = { version = "0.14.0-pre.9", features = ["hash2curve"] }
